Alteration in the dislikes

--- a/dislikes.html
+++ b/dislikes.html
@@ -44,9 +44,16 @@
                     <a class="nav-link" href="explore.html">Explore</a>
                 </li>
             </ul>
-            <div class="my-2 my-lg-0">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Georgia</button>
-            </div>
+            <div class="dropdown">
+                <div class="my-2 my-lg-0">
+                    <button class="btn btn-secondary dropdown-toggle " type="submit">Georgia</button>
+                </div>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </div>    
         </div>
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
@@ -233,13 +240,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center;">Burger</h5>
                             <p class="card-text" style="text-align: center">Juicy burgers!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -249,13 +251,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Chicken</h5>
                             <p class="card-text" style="text-align: center">Fresh chicken!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -266,13 +263,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Souvlaki</h5>
                             <p class="card-text" style="text-align: center">Delicious Souvlaki!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -282,13 +274,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Pizza</h5>
                             <p class="card-text" style="text-align: center">Delicious Pizza!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -298,13 +285,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Tortilla</h5>
                             <p class="card-text" style="text-align: center">Delicious Tortilla!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -314,13 +296,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Gyros</h5>
                             <p class="card-text" style="text-align: center">Delicious Gyros!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -330,13 +307,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Club Sandwich</h5>
                             <p class="card-text" style="text-align: center">Delicious Club Sandwich!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -346,13 +318,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Salad</h5>
                             <p class="card-text" style="text-align: center">Fresh Salad!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -362,13 +329,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Noodles</h5>
                             <p class="card-text" style="text-align: center">Fresh Noodles!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -378,13 +340,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Sushi</h5>
                             <p class="card-text" style="text-align: center">Delicious Sushi!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -394,13 +351,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Doughnuts</h5>
                             <p class="card-text" style="text-align: center">Fresh Doughnuts!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -410,13 +362,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Fruit Cake</h5>
                             <p class="card-text" style="text-align: center">Delicious Fruit Cake!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -426,13 +373,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Coffee</h5>
                             <p class="card-text" style="text-align: center">Fresh Coffee!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -442,13 +384,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Kleftiko</h5>
                             <p class="card-text" style="text-align: center">Stolen meat!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
@@ -458,13 +395,8 @@
                         <div class="card-body explore_card_body">
                             <h5 class="card-title" style="text-align: center">Loukoumades</h5>
                             <p class="card-text" style="text-align: center">Honney is running!</p>
-                            <button class="btn btn-outline-success"><i class="fa fa-thumbs-up"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-danger"><i class="fa fa-thumbs-down"
-                                    aria-hidden="true"></i></button>
-                            <button class="btn btn-outline-primary float-right"><i class="fa fa-plus"
-                                    aria-hidden="true"></i>&nbsp
-                                Add</button>
+                            <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
                         </div>
                     </div>
                 </div>
