Addition of drop-down menu

--- a/dislikes.html
+++ b/dislikes.html
@@ -45,13 +45,12 @@
                 </li>
             </ul>
             <div class="dropdown">
-                <div class="my-2 my-lg-0">
-                    <button class="btn btn-secondary dropdown-toggle " type="submit">Georgia</button>
-                </div>
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Georgia
+                </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Options</a>
+                    <a class="dropdown-item" href="#">Log Out</a>
                 </div>
             </div>    
         </div>
