--- a/myJourneys.html
+++ b/myJourneys.html
@@ -44,9 +44,15 @@
                     <a class="nav-link" href="explore.html">Explore</a>
                 </li>
             </ul>
-            <div class="my-2 my-lg-0">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Georgia</button>
-            </div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Georgia
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Options</a>
+                    <a class="dropdown-item" href="#">Log Out</a>
+                </div>
+            </div> 
         </div>
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
