Add likes and dislikes cards

--- a/explore.html
+++ b/explore.html
@@ -46,14 +46,15 @@
                 </li>
             </ul>
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Georgia
+                <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Georgia
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#">Options</a>
                     <a class="dropdown-item" href="#">Log Out</a>
                 </div>
-            </div> 
+            </div>
         </div>
     </nav>
     <!-- Side navigation -->
