--- a/likes.html
+++ b/likes.html
@@ -45,19 +45,21 @@
                 </li>
             </ul>
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Georgia
+                <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Georgia
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#">Options</a>
                     <a class="dropdown-item" href="#">Log Out</a>
                 </div>
-            </div> 
+            </div>
         </div>
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
         <div class="container">
-            <h1 class="display-4">Food that I love</h1> <p class="lead">I could eat these food all day!</p>
+            <h1 class="display-4">Food that I love</h1>
+            <p class="lead">I could eat these food all day!</p>
         </div>
     </div>
     <div class="container-fluid">
@@ -333,6 +335,204 @@
                     <div class="card-body explore_card_body">
                         <h5 class="card-title" style="text-align: center">Loukoumades</h5>
                         <p class="card-text" style="text-align: center">Honney is running!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/revithia.jpg" class="card-img-top food" alt="Revithia">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Revithia</h5>
+                        <p class="card-text" style="text-align: center">Soup with chickpeas and lemon</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/rokfor.jpg" class="card-img-top food" alt="Roquefort">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Roquefort</h5>
+                        <p class="card-text" style="text-align: center">Cheese from South France</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/agkinares.jpg" class="card-img-top food" alt="Agkinares">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Agkinares</h5>
+                        <p class="card-text" style="text-align: center">Fresh cardoons with carrots</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/sardeles.jpg" class="card-img-top food" alt="Sardeles">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Sardeles</h5>
+                        <p class="card-text" style="text-align: center">Salted sardines</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/kounoupidi.jpg" class="card-img-top food" alt="Kounoupidi">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Kounoupidi</h5>
+                        <p class="card-text" style="text-align: center">Boiled cauliflower wih salt</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/beans.jpg" class="card-img-top food" alt="Beans">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Beans</h5>
+                        <p class="card-text" style="text-align: center">Not for astronauts!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/koupes.jpg" class="card-img-top food" alt="Koupes">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Koupes</h5>
+                        <p class="card-text" style="text-align: center">Traditional Cypriot!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/koupepia.jpg" class="card-img-top food" alt="Koupepia">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Koupepia</h5>
+                        <p class="card-text" style="text-align: center">Delicous roll!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/sweetandsour.jpg" class="card-img-top food" alt="Sweet & Sour">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Sweet & Sour</h5>
+                        <p class="card-text" style="text-align: center">Chinesse chicken meat</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/steak.jpg" class="card-img-top food" alt="Steak">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Steak</h5>
+                        <p class="card-text" style="text-align: center">For meat lovers</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/village_salad.jpg" class="card-img-top food" alt="Village Salad">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Village Salad</h5>
+                        <p class="card-text" style="text-align: center">Exotic village salad</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/ribs.jpg" class="card-img-top food" alt="BBQ Ribs">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">BBQ Ribs</h5>
+                        <p class="card-text" style="text-align: center">Pork with bones!</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/friedchicken.jpeg" class="card-img-top food" alt="Fried Chicken">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Fried Chicken</h5>
+                        <p class="card-text" style="text-align: center">KFC alternative</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/lasagna.jpg" class="card-img-top food" alt="Lasagna">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Lasagna</h5>
+                        <p class="card-text" style="text-align: center">Garfield's favorite</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/porkchop.jpg" class="card-img-top food" alt="Pork Chop">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Pork Chop</h5>
+                        <p class="card-text" style="text-align: center">Meat with a long bone.</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/gemista.jpg" class="card-img-top food" alt="Gemista">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Gemista</h5>
+                        <p class="card-text" style="text-align: center">Vegetables with rice.</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/halloumi.jpg" class="card-img-top food" alt="Halloumi">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Halloumi</h5>
+                        <p class="card-text" style="text-align: center">Best cheese in the Universe.</p>
+                        <button class="btn btn-danger float-right"><i class="fa fa-trash"
+                                aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-" style="align-content: right">
+                <div class="card explore_card">
+                    <img src="images/products/kebap.jpg" class="card-img-top food" alt="Kebap">
+                    <div class="card-body explore_card_body">
+                        <h5 class="card-title" style="text-align: center">Kebap</h5>
+                        <p class="card-text" style="text-align: center">Turkish meat!</p>
                         <button class="btn btn-danger float-right"><i class="fa fa-trash"
                                 aria-hidden="true"></i></button>
                     </div>
