--- a/likes.html
+++ b/likes.html
@@ -49,12 +49,33 @@
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Georgia
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Options</a>
-                    <a class="dropdown-item" href="#">Log Out</a>
+                <div class="dropdown-menu dropdown-menu-lg-right shadow-lg p-3 mb-5" style="width:300px"
+                    aria-labelledby=" dropdownMenuButton">
+                    <h4 class="dropdown-item">Georgia Kapitsaki</h4>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item">
+                        <h6><i class="fa fa-history  fa-lg" aria-hidden="true"></i>&nbsp Past
+                            Orders</h6>
+                    </a>
+                    <a class="dropdown-item">
+                        <h6><i class="fa fa-home  fa-lg" aria-hidden="true"></i>&nbsp Addresses</h6>
+                    </a>
+                    <a class="dropdown-item">
+                        <h6><i class="fa fa-cog fa-lg" aria-hidden="true"></i>&nbsp Settings</h6>
+                    </a>
+                    <a class="dropdown-item">
+                        <h6><i class="fa fa-language  fa-lg" aria-hidden="true"></i>&nbsp Language</h6>
+                    </a>
+                    <a class="dropdown-item">
+                        <h6><i class="fa fa-adjust  fa-lg" aria-hidden="true"></i>&nbsp Dark
+                            Mode</h6>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item">
+                        <h6><i class="fa fa-sign-out  fa-lg" aria-hidden="true"></i>&nbsp Logout</h6>
+                    </a>
                 </div>
             </div>
-        </div>
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
         <div class="container">
