Picture matrix for Journeys

--- a/myJourneys.html
+++ b/myJourneys.html
@@ -89,7 +89,7 @@
             <!-- Meat Journey -->
             <div class="col-" style="align-content: right">
                 <div class="card journey_card">
-                    <img src="images/products/chicken.jpg" class="card-img-top journey" alt="Meat Lover">
+                    <img src="images/journeys/meatlover.png" class="card-img-top journey" alt="Meat Lover">
                     <div class="card-body journey_card_body">
                         <h5 class="card-title" style="text-align: center;">Meat Lover</h5>
                         <button class="btn btn-primary" data-toggle="modal" data-target="#meatLoverModal"><i
@@ -104,7 +104,7 @@
             <!-- Mom Journey -->
             <div class="col-" style="align-content: right">
                 <div class="card journey_card">
-                    <img src="images/products/koupepia.jpg" class="card-img-top journey" alt="Meat Lover">
+                    <img src="images/journeys/momjourney.png" class="card-img-top journey" alt="Meat Lover">
                     <div class="card-body journey_card_body">
                         <h5 class="card-title" style="text-align: center;">My mom is better than yours!</h5>
                         <button class="btn btn-primary" data-toggle="modal" data-target="#betterMomModal"><i
